--- a/index.html
+++ b/index.html
@@ -68,6 +68,39 @@
             <div class="carousel">
 
                 <!-- Begin : Botones de accion -->
+                <button class="carousel__arrow carousel__arrow--previous" id="Outprevious"> < </button>
+                <button class="carousel__arrow carousel__arrow--next" id="Outnext"> > </button>
+                <!-- End   : Botones de accion -->
+
+                <!-- Begin : Riel de vista -->
+                <div class="carousel__viewBox">
+                    <!-- Begin : Riel -->
+                    <div class="carousel__track demo" id="Outtrack">
+                        <div class="carousel__item2">Item 1</div>
+                        <div class="carousel__item2">Item 2</div>
+                        <div class="carousel__item2">Item 3</div>
+                        <div class="carousel__item2">Item 4</div>
+                        <div class="carousel__item2">Item 5</div>
+                        <div class="carousel__item2">Item 6</div>
+                        <div class="carousel__item2">Item 7</div>
+                        <div class="carousel__item2">Item 8</div>
+                        <div class="carousel__item2">Item 9</div>
+                        <div class="carousel__item2">Item 10</div>
+                    </div>
+                    <!-- End   : Riel -->
+                </div>
+                <!-- End   : Riel de vista -->
+            </div>
+            <!-- End   : Envoltorio del carousel -->
+        </section>
+        <!-- End   : Contenedor opcional -->
+
+        <!-- Begin : Contenedor opcional -->
+        <section>
+            <!-- Begin : Envoltorio del carousel -->
+            <div class="carousel">
+
+                <!-- Begin : Botones de accion -->
                 <button class="carousel__arrow carousel__arrow--previous" id="Bigprevious"> < </button>
                 <button class="carousel__arrow carousel__arrow--next" id="Bignext"> > </button>
                 <!-- End   : Botones de accion -->
@@ -90,7 +123,6 @@
                     <!-- End   : Riel -->
                 </div>
                 <!-- End   : Riel de vista -->
-
             </div>
             <!-- End   : Envoltorio del carousel -->
         </section>
