--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./css/final.css">
-        <script type="module" src="./final/index.js"></script>
+        <script type="module" src="./src/inderx.js"></script>
     </head>
 </head>
 <body>
@@ -127,6 +127,42 @@
             <!-- End   : Envoltorio del carousel -->
         </section>
         <!-- End   : Contenedor opcional -->
+
+                <!-- Begin : Contenedor opcional -->
+        <section>
+            <!-- Begin : Envoltorio del carousel -->
+            <div class="carousel">
+                <!-- Begin : Riel de vista -->
+                <div class="carousel__viewBox carousel__viewBox--3d">
+                    <!-- Begin : Riel -->
+                    <div class="carousel__track carousel__track--3d" id="Bigtrack3D">
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 1</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 2</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 3</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 4</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 5</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 6</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 7</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 8</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 9</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 10</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 11</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 12</div>
+
+                    </div>
+                    <!-- End   : Riel -->
+                </div>
+                <!-- End   : Riel de vista -->
+            </div>
+            <!-- End   : Envoltorio del carousel -->
+        </section>
+        <!-- End   : Contenedor opcional -->
+
+        <section class="demoButton">
+            <button id="prev3D"><| PREV</button>
+            <button id="next3D">NEXT |></button>
+        </section>
+
 
     </main>
 </body>
