--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
 </head>
 <body>
     <main>
-        <!-- Begin : Contenedor opcional -->
+        <!-- Begin: Primer Caso -->
         <section>
-            <!-- Begin : Envoltorio del carousel -->
+            <h2>Card by Card</h2>
+            <!-- Begin : Envoltorio del carousel Card by Card -->
             <div class="carousel">
 
                 <!-- Begin : Botones de accion -->
-                <button class="carousel__arrow carousel__arrow--previous" id="previous"> < </button>
-                <button class="carousel__arrow carousel__arrow--next" id="next"> > </button>
+                <button class="carousel__arrow carousel__arrow--previous" id="card-by-card-previous"> < </button>
+                <button class="carousel__arrow carousel__arrow--next" id="card-by-card-next"> > </button>
                 <!-- End   : Botones de accion -->
 
                 <!-- Begin : Riel de vista -->
                 <div class="carousel__viewBox">
                     <!-- Begin : Riel -->
-                    <div class="carousel__track" id="track">
+                    <div class="carousel__track" id="card-by-card-track">
                         <div class="carousel__item">1</div>
                         <div class="carousel__item">2</div>
                         <div class="carousel__item">3</div>
@@ -56,26 +57,77 @@
                     <!-- End   : Riel -->
                 </div>
                 <!-- End   : Riel de vista -->
-
             </div>
-            <!-- End   : Envoltorio del carousel -->
+            <!-- End   : Envoltorio del carousel Card by Card -->
         </section>
-        <!-- End   : Contenedor opcional -->
+        <div class="space"></div>
+        <!-- End  : Primer Caso -->
 
-        <!-- Begin : Contenedor opcional -->
+        <!-- Begin: Segundo Caso -->
         <section>
-            <!-- Begin : Envoltorio del carousel -->
+            <h2>Fluid</h2>
+            <!-- Begin : Envoltorio del carousel Fluid -->
             <div class="carousel">
 
                 <!-- Begin : Botones de accion -->
-                <button class="carousel__arrow carousel__arrow--previous" id="Outprevious"> < </button>
-                <button class="carousel__arrow carousel__arrow--next" id="Outnext"> > </button>
+                <button class="carousel__arrow carousel__arrow--previous" id="fluid-previous"> < </button>
+                <button class="carousel__arrow carousel__arrow--next" id="fluid-next"> > </button>
                 <!-- End   : Botones de accion -->
 
                 <!-- Begin : Riel de vista -->
                 <div class="carousel__viewBox">
                     <!-- Begin : Riel -->
-                    <div class="carousel__track demo" id="Outtrack">
+                    <div class="carousel__track" id="fluid-track">
+                        <div class="carousel__item">1</div>
+                        <div class="carousel__item">2</div>
+                        <div class="carousel__item">3</div>
+                        <div class="carousel__item">4</div>
+                        <div class="carousel__item">5</div>
+                        <div class="carousel__item">6</div>
+                        <div class="carousel__item">7</div>
+                        <div class="carousel__item">8</div>
+                        <div class="carousel__item">9</div>
+                        <div class="carousel__item">10</div>
+                        <div class="carousel__item">11</div>
+                        <div class="carousel__item">12</div>
+                        <div class="carousel__item">13</div>
+                        <div class="carousel__item">14</div>
+                        <div class="carousel__item">15</div>
+                        <div class="carousel__item">16</div>
+                        <div class="carousel__item">17</div>
+                        <div class="carousel__item">18</div>
+                        <div class="carousel__item">19</div>
+                        <div class="carousel__item">20</div>
+                        <div class="carousel__item">21</div>
+                        <div class="carousel__item">22</div>
+                        <div class="carousel__item">23</div>
+                        <div class="carousel__item">24</div>
+                        <div class="carousel__item">25</div>
+                    </div>
+                    <!-- End   : Riel -->
+                </div>
+                <!-- End   : Riel de vista -->
+            </div>
+            <!-- End   : Envoltorio del carousel Fluid -->
+        </section>
+        <div class="space"></div>
+        <!-- End  : Segundo Caso -->
+
+        <!-- Begin: Tercer Caso -->
+        <section>
+            <h2>Full Screen</h2>
+            <!-- Begin : Envoltorio del carousel FullScreen -->
+            <div class="carousel">
+
+                <!-- Begin : Botones de accion -->
+                <button class="carousel__arrow carousel__arrow--previous" id="full-previous"> < </button>
+                <button class="carousel__arrow carousel__arrow--next" id="full-next"> > </button>
+                <!-- End   : Botones de accion -->
+
+                <!-- Begin : Riel de vista -->
+                <div class="carousel__viewBox">
+                    <!-- Begin : Riel -->
+                    <div class="carousel__track demo" id="full-track">
                         <div class="carousel__item2">Item 1</div>
                         <div class="carousel__item2">Item 2</div>
                         <div class="carousel__item2">Item 3</div>
@@ -86,29 +138,46 @@
                         <div class="carousel__item2">Item 8</div>
                         <div class="carousel__item2">Item 9</div>
                         <div class="carousel__item2">Item 10</div>
+                        <div class="carousel__item2">Item 11</div>
+                        <div class="carousel__item2">Item 12</div>
+                        <div class="carousel__item2">Item 13</div>
+                        <div class="carousel__item2">Item 14</div>
+                        <div class="carousel__item2">Item 15</div>
+                        <div class="carousel__item2">Item 16</div>
+                        <div class="carousel__item2">Item 17</div>
+                        <div class="carousel__item2">Item 18</div>
+                        <div class="carousel__item2">Item 19</div>
+                        <div class="carousel__item2">Item 20</div>
+                        <div class="carousel__item2">Item 21</div>
+                        <div class="carousel__item2">Item 22</div>
+                        <div class="carousel__item2">Item 23</div>
+                        <div class="carousel__item2">Item 24</div>
+                        <div class="carousel__item2">Item 25</div>
                     </div>
                     <!-- End   : Riel -->
                 </div>
                 <!-- End   : Riel de vista -->
             </div>
-            <!-- End   : Envoltorio del carousel -->
+            <!-- End   : Envoltorio del carousel FullScreen -->
         </section>
-        <!-- End   : Contenedor opcional -->
-
-        <!-- Begin : Contenedor opcional -->
+        <div class="space"></div>
+        <!-- End  : Tercer Caso -->
+        
+        <!-- Begin: Cuarto Caso -->
         <section>
-            <!-- Begin : Envoltorio del carousel -->
+            <h2>Full Screen with Pagination</h2>
+            <!-- Begin : Envoltorio del carousel FullScreen Pagination -->
             <div class="carousel">
 
                 <!-- Begin : Botones de accion -->
-                <button class="carousel__arrow carousel__arrow--previous" id="Bigprevious"> < </button>
-                <button class="carousel__arrow carousel__arrow--next" id="Bignext"> > </button>
+                <button class="carousel__arrow carousel__arrow--previous" id="full-pagination-previous"> < </button>
+                <button class="carousel__arrow carousel__arrow--next" id="full-pagination-next"> > </button>
                 <!-- End   : Botones de accion -->
 
                 <!-- Begin : Riel de vista -->
                 <div class="carousel__viewBox">
                     <!-- Begin : Riel -->
-                    <div class="carousel__track demo" id="Bigtrack">
+                    <div class="carousel__track demo" id="full-pagination-track">
                         <div class="carousel__item2">Item 1</div>
                         <div class="carousel__item2">Item 2</div>
                         <div class="carousel__item2">Item 3</div>
@@ -119,23 +188,129 @@
                         <div class="carousel__item2">Item 8</div>
                         <div class="carousel__item2">Item 9</div>
                         <div class="carousel__item2">Item 10</div>
+                        <div class="carousel__item2">Item 11</div>
+                        <div class="carousel__item2">Item 12</div>
+                        <div class="carousel__item2">Item 13</div>
+                        <div class="carousel__item2">Item 14</div>
+                        <div class="carousel__item2">Item 15</div>
+                        <div class="carousel__item2">Item 16</div>
+                        <div class="carousel__item2">Item 17</div>
+                        <div class="carousel__item2">Item 18</div>
+                        <div class="carousel__item2">Item 19</div>
+                        <div class="carousel__item2">Item 20</div>
+                        <div class="carousel__item2">Item 21</div>
+                        <div class="carousel__item2">Item 22</div>
+                        <div class="carousel__item2">Item 23</div>
+                        <div class="carousel__item2">Item 24</div>
+                        <div class="carousel__item2">Item 25</div>
                     </div>
                     <!-- End   : Riel -->
                 </div>
                 <!-- End   : Riel de vista -->
             </div>
-            <!-- End   : Envoltorio del carousel -->
+            <!-- End   : Envoltorio del carousel FullScreen Pagination -->
         </section>
-        <!-- End   : Contenedor opcional -->
+        <div class="space"></div>
+        <!-- End  : Cuarto Caso -->
 
-                <!-- Begin : Contenedor opcional -->
+        <!-- Begin: Quinto Caso -->
         <section>
-            <!-- Begin : Envoltorio del carousel -->
+            <h2>Master and Slave</h2>
+            <!-- Begin : Envoltorio del carousel Master -->
+            <div class="carousel">
+
+                <!-- Begin : Botones de accion -->
+                <button class="carousel__arrow carousel__arrow--previous" id="master-previous"> < </button>
+                <button class="carousel__arrow carousel__arrow--next" id="master-next"> > </button>
+                <!-- End   : Botones de accion -->
+
+                <!-- Begin : Riel de vista -->
+                <div class="carousel__viewBox">
+                    <!-- Begin : Riel -->
+                    <div class="carousel__track demo" id="master-track">
+                        <div class="carousel__item2">Item 1</div>
+                        <div class="carousel__item2">Item 2</div>
+                        <div class="carousel__item2">Item 3</div>
+                        <div class="carousel__item2">Item 4</div>
+                        <div class="carousel__item2">Item 5</div>
+                        <div class="carousel__item2">Item 6</div>
+                        <div class="carousel__item2">Item 7</div>
+                        <div class="carousel__item2">Item 8</div>
+                        <div class="carousel__item2">Item 9</div>
+                        <div class="carousel__item2">Item 10</div>
+                        <div class="carousel__item2">Item 11</div>
+                        <div class="carousel__item2">Item 12</div>
+                        <div class="carousel__item2">Item 13</div>
+                        <div class="carousel__item2">Item 14</div>
+                        <div class="carousel__item2">Item 15</div>
+                        <div class="carousel__item2">Item 16</div>
+                        <div class="carousel__item2">Item 17</div>
+                        <div class="carousel__item2">Item 18</div>
+                        <div class="carousel__item2">Item 19</div>
+                        <div class="carousel__item2">Item 20</div>
+                        <div class="carousel__item2">Item 21</div>
+                        <div class="carousel__item2">Item 22</div>
+                        <div class="carousel__item2">Item 23</div>
+                        <div class="carousel__item2">Item 24</div>
+                        <div class="carousel__item2">Item 25</div>
+                    </div>
+                    <!-- End   : Riel -->
+                </div>
+                <!-- End   : Riel de vista -->
+            </div>
+            <!-- End   : Envoltorio del carousel Master -->
+
+            <!-- Begin : Envoltorio del carousel Slave -->
+            <div class="carousel jump">
+                <!-- Begin : Riel de vista -->
+                <div class="carousel__viewBox">
+                    <!-- Begin : Riel -->
+                    <div class="carousel__track" id="slave-track">
+                        <div class="carousel__item">1</div>
+                        <div class="carousel__item">2</div>
+                        <div class="carousel__item">3</div>
+                        <div class="carousel__item">4</div>
+                        <div class="carousel__item">5</div>
+                        <div class="carousel__item">6</div>
+                        <div class="carousel__item">7</div>
+                        <div class="carousel__item">8</div>
+                        <div class="carousel__item">9</div>
+                        <div class="carousel__item">10</div>
+                        <div class="carousel__item">11</div>
+                        <div class="carousel__item">12</div>
+                        <div class="carousel__item">13</div>
+                        <div class="carousel__item">14</div>
+                        <div class="carousel__item">15</div>
+                        <div class="carousel__item">16</div>
+                        <div class="carousel__item">17</div>
+                        <div class="carousel__item">18</div>
+                        <div class="carousel__item">19</div>
+                        <div class="carousel__item">20</div>
+                        <div class="carousel__item">21</div>
+                        <div class="carousel__item">22</div>
+                        <div class="carousel__item">23</div>
+                        <div class="carousel__item">24</div>
+                        <div class="carousel__item">25</div>
+                    </div>
+                    <!-- End   : Riel -->
+                </div>
+                <!-- End   : Riel de vista -->
+            </div>
+            <!-- End   : Envoltorio del carousel Slave -->
+
+        </section>
+        <div class="space"></div>
+        <!-- End  : Quinto Caso -->
+
+        <!-- Begin: Sexto Caso -->
+        <section>
+            <h2>3D Transition</h2>
+            <!-- Begin : Envoltorio del carousel 3d -->
             <div class="carousel">
                 <!-- Begin : Riel de vista -->
                 <div class="carousel__viewBox carousel__viewBox--3d">
                     <!-- Begin : Riel -->
-                    <div class="carousel__track carousel__track--3d" id="Bigtrack3D">
+                    <div class="carousel__track carousel__track--3d" id="axis-track">
                         <div class="carousel__item carousel__item--3d"><span></span>Item 1</div>
                         <div class="carousel__item carousel__item--3d"><span></span>Item 2</div>
                         <div class="carousel__item carousel__item--3d"><span></span>Item 3</div>
@@ -148,22 +323,31 @@
                         <div class="carousel__item carousel__item--3d"><span></span>Item 10</div>
                         <div class="carousel__item carousel__item--3d"><span></span>Item 11</div>
                         <div class="carousel__item carousel__item--3d"><span></span>Item 12</div>
-
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 13</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 14</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 15</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 16</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 17</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 18</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 19</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 20</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 21</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 22</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 23</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 24</div>
+                        <div class="carousel__item carousel__item--3d"><span></span>Item 25</div>
                     </div>
                     <!-- End   : Riel -->
                 </div>
                 <!-- End   : Riel de vista -->
             </div>
-            <!-- End   : Envoltorio del carousel -->
+            <!-- End   : Envoltorio del carousel 3d -->
+            <section class="demoButton">
+                <button id="axis-prev">< PREV</button>
+                <button id="axis-next">NEXT ></button>
+            </section>
         </section>
-        <!-- End   : Contenedor opcional -->
-
-        <section class="demoButton">
-            <button id="prev3D"><| PREV</button>
-            <button id="next3D">NEXT |></button>
-        </section>
-
-
+        <!-- End  : Sexto Caso -->
     </main>
 </body>
 </html>
