feat(app): se agtrega opcion vertical

--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./css/final.css">
-        <script type="module" src="./src/inderx.js"></script>
+        <script type="module" src="./src/index.js"></script>
     </head>
 </head>
 <body>
@@ -16,76 +16,33 @@
 
         <!-- Begin : Contenedor opcional -->
         <section>
-            <!-- Begin : Envoltorio del carousel -->
-            <div class="carousel">
-
+            <!-- Begin : Envoltorio del carousel vertical -->
+            <div class="carousel carousel--vertical">
                 <!-- Begin : Botones de accion -->
-                <button class="carousel__arrow carousel__arrow--previous" id="Mainprevious"> < </button>
-                <button class="carousel__arrow carousel__arrow--next" id="Mainnext"> > </button>
+                <button class="carousel__arrow carousel__arrow--vprevious" id="vertical-previous"> 🔼 </button>
+                <button class="carousel__arrow carousel__arrow--vnext" id="vertical-next"> 🔽 </button>
                 <!-- End   : Botones de accion -->
-
-                <!-- Begin : Riel de vista -->
                 <div class="carousel__viewBox">
-                    <!-- Begin : Riel -->
-                    <div class="carousel__track demo" id="Maintrack">
-                        <div class="carousel__item2">Item 1</div>
-                        <div class="carousel__item2">Item 2</div>
-                        <div class="carousel__item2">Item 3</div>
-                        <div class="carousel__item2">Item 4</div>
-                        <div class="carousel__item2">Item 5</div>
-                        <div class="carousel__item2">Item 6</div>
-                        <div class="carousel__item2">Item 7</div>
-                        <div class="carousel__item2">Item 8</div>
-                        <div class="carousel__item2">Item 9</div>
-                        <div class="carousel__item2">Item 10</div>
-                        <div class="carousel__item2">Item 11</div>
-                        <div class="carousel__item2">Item 12</div>
-                        <div class="carousel__item2">Item 13</div>
-                        <div class="carousel__item2">Item 14</div>
-                        <div class="carousel__item2">Item 15</div>
+                    <div class="carousel__track carousel__track--vertical" id="vertical-track">
+                        <div class="carousel__item2 carousel__item2--aux">Item 1</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 2</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 3</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 4</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 5</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 6</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 7</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 8</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 9</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 10</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 11</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 12</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 13</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 14</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 15</div>
                     </div>
-                    <!-- End   : Riel -->
                 </div>
-                <!-- End   : Riel de vista -->
             </div>
-            <!-- End   : Envoltorio del carousel -->
-        </section>
-        <!-- End   : Contenedor opcional -->
-        <!-- Begin : Contenedor opcional -->
-        <section>
-            <!-- Begin : Envoltorio del carousel -->
-            <div class="carousel">
-
-                <!-- Begin : Botones de accion -->
-
-                <!-- End   : Botones de accion -->
-
-                <!-- Begin : Riel de vista -->
-                <div class="carousel__viewBox">
-                    <!-- Begin : Riel -->
-                    <div class="carousel__track" id="track1">
-                        <div class="carousel__item">1</div>
-                        <div class="carousel__item">2</div>
-                        <div class="carousel__item">3</div>
-                        <div class="carousel__item">4</div>
-                        <div class="carousel__item">5</div>
-                        <div class="carousel__item">6</div>
-                        <div class="carousel__item">7</div>
-                        <div class="carousel__item">8</div>
-                        <div class="carousel__item">9</div>
-                        <div class="carousel__item">10</div>
-                        <div class="carousel__item">11</div>
-                        <div class="carousel__item">12</div>
-                        <div class="carousel__item">13</div>
-                        <div class="carousel__item">14</div>
-                        <div class="carousel__item">15</div>
-                    </div>
-                    <!-- End   : Riel -->
-                </div>
-                <!-- End   : Riel de vista -->
-
-            </div>
-            <!-- End   : Envoltorio del carousel -->
+            <!-- End   : Envoltorio del carousel vertical -->
         </section>
         <!-- End   : Contenedor opcional -->
     </main>
