--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./css/final.css">
-        <script type="module" src="./src/inderx.js"></script>
+        <script type="module" src="./src/index.js"></script>
     </head>
 </head>
 <body>
@@ -302,7 +302,42 @@
         <div class="space"></div>
         <!-- End  : Quinto Caso -->
 
+
         <!-- Begin: Sexto Caso -->
+        <section>
+            <h2>Desplasamiento vertical</h2>
+            <!-- Begin : Envoltorio del carousel vertical -->
+            <div class="carousel carousel--vertical">
+                <!-- Begin : Botones de accion -->
+                <button class="carousel__arrow carousel__arrow--vprevious" id="vertical-previous"> 🔼 </button>
+                <button class="carousel__arrow carousel__arrow--vnext" id="vertical-next"> 🔽 </button>
+                <!-- End   : Botones de accion -->
+                <div class="carousel__viewBox">
+                    <div class="carousel__track carousel__track--vertical" id="vertical-track">
+                        <div class="carousel__item2 carousel__item2--aux">Item 1</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 2</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 3</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 4</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 5</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 6</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 7</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 8</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 9</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 10</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 11</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 12</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 13</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 14</div>
+                        <div class="carousel__item2 carousel__item2--aux">Item 15</div>
+                    </div>
+                </div>
+            </div>
+            <!-- End   : Envoltorio del carousel vertical -->
+        </section>
+        <div class="space"></div>
+        <!-- End  : Sexto Caso -->
+
+        <!-- Begin: Septimo Caso -->
         <section>
             <h2>3D Transition</h2>
             <!-- Begin : Envoltorio del carousel 3d -->
@@ -347,7 +382,7 @@
                 <button id="axis-next">NEXT ></button>
             </section>
         </section>
-        <!-- End  : Sexto Caso -->
+        <!-- End  : Septimo Caso -->
     </main>
 </body>
 </html>
