--- a/demo.html
+++ b/demo.html
@@ -14,37 +14,52 @@
 <body>
     <main>
 
-        <!-- Begin : Contenedor opcional -->
         <section>
-            <!-- Begin : Envoltorio del carousel vertical -->
-            <div class="carousel carousel--vertical">
+            <h2>Card by Card</h2>
+            <!-- Begin : Envoltorio del carousel Card by Card -->
+            <div class="carousel">
+
                 <!-- Begin : Botones de accion -->
-                <button class="carousel__arrow carousel__arrow--vprevious" id="vertical-previous"> 🔼 </button>
-                <button class="carousel__arrow carousel__arrow--vnext" id="vertical-next"> 🔽 </button>
+                <button class="carousel__arrow carousel__arrow--previous" id="card-by-card-previous"> < </button>
+                <button class="carousel__arrow carousel__arrow--next" id="card-by-card-next"> > </button>
                 <!-- End   : Botones de accion -->
+
+                <!-- Begin : Riel de vista -->
                 <div class="carousel__viewBox">
-                    <div class="carousel__track carousel__track--vertical" id="vertical-track">
-                        <div class="carousel__item2 carousel__item2--aux">Item 1</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 2</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 3</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 4</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 5</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 6</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 7</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 8</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 9</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 10</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 11</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 12</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 13</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 14</div>
-                        <div class="carousel__item2 carousel__item2--aux">Item 15</div>
+                    <!-- Begin : Riel -->
+                    <div class="carousel__track" id="card-by-card-track">
+                        <div class="carousel__item">1</div>
+                        <div class="carousel__item">2</div>
+                        <div class="carousel__item">3</div>
+                        <div class="carousel__item">4</div>
+                        <div class="carousel__item">5</div>
+                        <div class="carousel__item">6</div>
+                        <div class="carousel__item">7</div>
+                        <div class="carousel__item">8</div>
+                        <div class="carousel__item">9</div>
+                        <div class="carousel__item">10</div>
+                        <div class="carousel__item">11</div>
+                        <div class="carousel__item">12</div>
+                        <div class="carousel__item">13</div>
+                        <div class="carousel__item">14</div>
+                        <div class="carousel__item">15</div>
+                        <div class="carousel__item">16</div>
+                        <div class="carousel__item">17</div>
+                        <div class="carousel__item">18</div>
+                        <div class="carousel__item">19</div>
+                        <div class="carousel__item">20</div>
+                        <div class="carousel__item">21</div>
+                        <div class="carousel__item">22</div>
+                        <div class="carousel__item">23</div>
+                        <div class="carousel__item">24</div>
+                        <div class="carousel__item">25</div>
                     </div>
+                    <!-- End   : Riel -->
                 </div>
+                <!-- End   : Riel de vista -->
             </div>
-            <!-- End   : Envoltorio del carousel vertical -->
+            <!-- End   : Envoltorio del carousel Card by Card -->
         </section>
-        <!-- End   : Contenedor opcional -->
     </main>
 </body>
 </html>
